Fixed SurefireBooterForkException